Run ./run_me.sh and kick off

--- a/.env.integration-test
+++ b/.env.integration-test
@@ -3,5 +3,5 @@ APP_GRPC_PORT=0
 APP_REST_PORT=0
 APP_METRICS_PORT=0
 ENVIRONMENT=test
-SERVICE_NAME="Kit Template"
-DATABASE_DSN=postgres://kittemplate:kittemplate@localhost:5432/kittemplate?sslmode=disable
+SERVICE_NAME="Faceit"
+DATABASE_DSN=postgres://faceit:faceit@localhost:5432/faceit?sslmode=disable
