--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,5 +2,5 @@ services:
   app:
     build:
       dockerfile: Dockerfile.development
-    image: kittemplate-app-dev
-    container_name: kittemplate-app-dev
+    image: faceit-app-dev
+    container_name: faceit-app-dev
