--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -29,6 +29,8 @@ jobs:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
           version: v1.61.0
 
+          args: --timeout=5m
+
           # Optional: working directory, useful for monorepos
           # working-directory: somedir
 
