feat: Add rate limit

--- a/.env.integration-test
+++ b/.env.integration-test
@@ -1,7 +1,17 @@
+# Logger
 LOG_LEVEL=WARN
+
+# Servers
 APP_GRPC_PORT=0
 APP_REST_PORT=0
 APP_METRICS_PORT=0
+APP_HEALTH_PORT=0
+
+# Environment
 ENVIRONMENT=test
+
+# Service
 SERVICE_NAME="Faceit"
+
+# Database
 DATABASE_DSN=postgres://faceit:faceit@localhost:5432/faceit?sslmode=disable
