--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,22 @@
+# Logger
 LOG_LEVEL=DEBUG
+
+# Servers
 APP_GRPC_PORT=8000
 APP_REST_PORT=8080
 APP_METRICS_PORT=8010
+APP_HEALTH_PORT=8001
+
+# Rate Limiter
+#RATE_LIMITER_ENABLED=true
+#RATE_LIMITER_CLIENT_REQUESTS_PER_SEC=5
+#RATE_LIMITER_CLIENT_BURST_LIMIT=10
+
+# Environment
 ENVIRONMENT=dev
+
+# Service
 SERVICE_NAME="Faceit"
+
+# Database
 DATABASE_DSN=postgres://faceit:faceit@database:5432/faceit?sslmode=disable
